# Auto-Scale-Development

./: (step 4 generated data) IDT paired.csv  (step 4) GPT_to_generate_fine_tuning_dataset.ipynb  (step 5) Fine_Tuning_Sentence_Transformers_Models.ipynb  (step 6)text_based_EFA.ipynb  LICENSE  MANIFEST.in  README.md  Study_1_Scale_Development_Example_Code.ipynb  functions_example.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  text_based_EFA.ipynb
auto_scale_development/: __init__.py  config.py  core_functions.py  helper_functions.py  prompts.py
