[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_scale_development"
version = "0.1.0"
description = "A Python package for automated scale development and analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Auto Scale Development Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "python-dotenv>=0.19.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "numpy>=1.21.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "together>=0.2.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.21.0",
    "torch>=1.13.0",
    "scikit-learn>=1.0.0",
    "factor_analyzer>=0.5.0",
    "datasets>=2.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.64.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_scale_development*"]